# ProyCienDatos2024-2

./: README.md  pyproject.toml  requirements.txt
Módulo 1/: Clase0_GuiaProyCienDatos.ipynb  Clase1_IntroPython.ipynb  Clase2_GitTutorial.ipynb  Clase3_EntornosVirtuales.ipynb  Clase4_API.ipynb  Clase5_FastAPI.ipynb  Clase6_LLMIntro.ipynb  Clase7_TrabajoEnClaseProyecto.ipynb
Módulo 2/: Clase10_ModelRegistry.ipynb  Clase11_MLFlow&DagsHub.ipynb  Clase12_TrabajoEnClaseProyecto.ipynb  Clase13_MLPipelines.ipynb  Clase14_TrabajoEnClaseOrchestration.ipynb  Clase15_MLPipelines_PartII.ipynb  Clase16_.ipynb  Clase16_LevelsMLSoftware.ipynb  Clase17_ModelAsAService&Streamlit.ipynb  Clase18_Containers&Docker.ipynb  Clase19_DockerNetwork&DockerCompose.ipynb  Clase21_AsesoriaDelCurso.ipynb  Clase22_TrabajoEnClaseProyecto.ipynb  Clase23_CloudComputing.ipynb  Clase24_CloudComputingII.ipynb  Clase25_FechasFinales.ipynb  Clase8_IntroMLOps.ipynb  Clase9_ExperimentTracking.ipynb  Clase9_TrackingExperiment.ipynb  GuiaProyecto.ipynb
Módulo 2/images/: mlflow-tracking-server-model-registry.excalidraw  mlops-experiment-tracking-excalidraw.excalidraw
Módulo 3/: Clase9_TrackingExperiment.ipynb
