[tool.poetry]
name = "proyciendatos2024-2"
version = "0.1.0"
description = ""
authors = ["Cristian Zapata <cristian.zapata@wizeline.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
