[tool.poetry]
name = "proyciendatos2024-2"
version = "0.1.0"
description = ""
authors = ["Cristian Zapata <cristian.zapata@wizeline.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
black = "^24.8.0"
fastapi = {extras = ["standard"], version = "^0.112.2"}
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.32"
anthropic = "^0.34.1"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
xgboost = "^2.1.1"
fastparquet = "^2024.5.0"
boto3 = "^1.35.13"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
pyarrow = "^17.0.0"
mlflow = "^2.16.0"
hyperopt = "^0.2.7"
prefect = "^3.0.3"
dagshub = "^0.3.39"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
